crates/id_effect/tests/ui/into_bind_removed.rs
fn main() {
  // CapEnvN removed in v3; use caps!(K0, K1, ...) instead.
  let _: id_effect::CapEnv3<(), (), ()>;
}
